Garnish Dialog: added logic to hide buttons if garnish1 = garnish2. Changed None button to say Neither

--- a/BarBot/BarBot.UWP/UserControls/RecipeDetail/Dialogs/GarnishContentDialog.xaml
+++ b/BarBot/BarBot.UWP/UserControls/RecipeDetail/Dialogs/GarnishContentDialog.xaml
@@ -56,7 +56,7 @@
                 Tag="GarnishOptionBoth" />
         <Button x:Name="GarnishButtonNone"
                 Style="{StaticResource GarnishButtonStyle}"
-                Content="None" 
+                Content="Neither" 
                 Click="GarnishButton_Click"
                 Tag="GarnishOptionNone" />
     </StackPanel>
