Added garnish icon, button to AppBar, displayed on ContainerPanel Page

--- a/BarBot/BarBot.UWP/Pages/ContainerPanel.xaml
+++ b/BarBot/BarBot.UWP/Pages/ContainerPanel.xaml
@@ -26,6 +26,7 @@
                    HomeButtonVisible="False"
                    FilterButtonVisible="False"
                    SearchButtonVisible="False"
+                   GarnishButtonVisible="True"
                    SettingsButtonVisible="False"></ab:AppBar>
         <ProgressRing x:Name="ProgressRing"
                       Style="{StaticResource ProgressRingStyle}" />
