--- a/BarBot/BarBot.UWP/Themes/Generic.xaml
+++ b/BarBot/BarBot.UWP/Themes/Generic.xaml
@@ -24,7 +24,21 @@
             <Setter.Value>
                 <ControlTemplate TargetType="cp:Tc_ContainerTile">
                     <StackPanel x:Name="ContainerTileStackPanel"
-                            Style="{StaticResource ContainerTileStackPanelStyle}">
+                                Style="{StaticResource ContainerTileStackPanelStyle}">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="TapStates">
+                                <VisualState x:Name="PointerDown">
+                                    <Storyboard>
+                                        <PointerDownThemeAnimation TargetName="ContainerTileStackPanel" />
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="PointerUp">
+                                    <Storyboard>
+                                        <PointerUpThemeAnimation TargetName="ContainerTileStackPanel" />
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
                         <TextBlock x:Name="ContainerNumberTextBlock"
                                Text="{Binding Path=Container.Number}"
                                Style="{StaticResource ContainerNumberTextBlockStyle}" />
@@ -57,7 +71,22 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="rl:Tc_RecipeTile">
-                    <Grid>
+                    <Grid x:Name="RecipeTileGrid">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="TapStates">
+                                <VisualState x:Name="Normal"/>
+                                <VisualState x:Name="PointerDown">
+                                    <Storyboard>
+                                        <PointerDownThemeAnimation TargetName="RecipeTileGrid"/>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="PointerUp">
+                                    <Storyboard>
+                                        <PointerUpThemeAnimation TargetName="RecipeTileGrid"/>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
                         <Button x:Name="HexagonButton">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
@@ -116,22 +145,37 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="cl:Tc_CategoryTile">
-                    <Grid>
+                    <Grid x:Name="CategoryTileGrid">
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="TapStates">
+                                <VisualState x:Name="Normal"/>
+                                <VisualState x:Name="PointerDown">
+                                    <Storyboard>
+                                        <PointerDownThemeAnimation TargetName="CategoryTileGrid"/>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="PointerUp">
+                                    <Storyboard>
+                                        <PointerUpThemeAnimation TargetName="CategoryTileGrid"/>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
                         <Button x:Name="HexagonButton">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Image x:Name="HexBackground" 
-                                           Style="{StaticResource MenuHexagonImageStyle}"
-                                           Source="ms-appx:///Assets/HexagonTile.png"/>
+                                        Style="{StaticResource MenuHexagonImageStyle}"
+                                        Source="ms-appx:///Assets/HexagonTile.png"/>
                                 </ControlTemplate>
                             </Button.Template>
                         </Button>
                         <Button x:Name="CategoryImageButton"
-                                Style="{StaticResource MenuImageButtonStyle}">
+                            Style="{StaticResource MenuImageButtonStyle}">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Image x:Name="CategoryImage"
-                                           Style="{StaticResource MenuImageStyle}">
+                                        Style="{StaticResource MenuImageStyle}">
                                         <Image.Source>
                                             <BitmapImage UriSource="{Binding CachedImage.UriSource}"/>
                                         </Image.Source>
@@ -140,12 +184,12 @@
                             </Button.Template>
                         </Button>
                         <Button x:Name="HexagonGradientButton"
-                                Style="{StaticResource MenuHexagonGradientButtonStyle}">
+                            Style="{StaticResource MenuHexagonGradientButtonStyle}">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Image x:Name="HexagonGradientImage"
-                                           Style="{StaticResource MenuImageStyle}"
-                                           Source="ms-appx:///Assets/HexagonTileGradient.png" />
+                                        Style="{StaticResource MenuImageStyle}"
+                                        Source="ms-appx:///Assets/HexagonTileGradient.png" />
                                 </ControlTemplate>
                             </Button.Template>
                         </Button>
