--- a/BarBot/BarBot.UWP/UserControls/CategoryList/Uc_CategoryList.xaml
+++ b/BarBot/BarBot.UWP/UserControls/CategoryList/Uc_CategoryList.xaml
@@ -18,10 +18,20 @@
     </UserControl.Resources>
 
     <Grid Name="CategoryListMainGrid" Style="{StaticResource CategoryListMainGridStyle}">
-        <Canvas Name="CategoryListCanvas" Style="{StaticResource CategoryListCanvasStyle}"></Canvas>
+        <Grid.ChildrenTransitions>
+            <TransitionCollection>
+                <ContentThemeTransition/>
+            </TransitionCollection>
+        </Grid.ChildrenTransitions>
+        <Canvas Name="CategoryListCanvas" Style="{StaticResource CategoryListCanvasStyle}" />
         <Button x:Name="CategoryListBackButton" 
                 Click="Previous_Page"
                 Style="{StaticResource CategoryListBackButtonStyle}">
+            <Button.Transitions>
+                <TransitionCollection>
+                    <EntranceThemeTransition />
+                </TransitionCollection>
+            </Button.Transitions>
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Image x:Name="BackButtonImg" 
@@ -34,6 +44,11 @@
         <Button x:Name="CategoryListNextButton" 
                 Click="Next_Page" 
                 Style="{StaticResource CategoryListNextButtonStyle}">
+            <Button.Transitions>
+                <TransitionCollection>
+                    <EntranceThemeTransition />
+                </TransitionCollection>
+            </Button.Transitions>
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Image x:Name="NextButtonImg" 
