--- a/BarBot/BarBot.UWP/Styles/ContentDialogStyles.xaml
+++ b/BarBot/BarBot.UWP/Styles/ContentDialogStyles.xaml
@@ -101,7 +101,7 @@
 
     <Style x:Key="GarnishTextBlockStyle" TargetType="TextBlock">
         <Setter Property="FontSize" Value="{StaticResource GarnishFontSize}" />
-        <Setter Property="Width" Value="325" />
+        <Setter Property="Width" Value="525" />
         <Setter Property="Height" Value="{StaticResource GarnishRowHeight}" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="HorizontalAlignment" Value="Left" />
@@ -109,18 +109,13 @@
         <Setter Property="TextAlignment" Value="Left" />
         <Setter Property="FontFamily" Value="Microsoft Yi Baiti" />
         <Setter Property="TextWrapping" Value="WrapWholeWords" />
-    </Style>
-
-    <Style x:Key="GarnishQuantityTextBlockStyle" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="{StaticResource GarnishFontSize}" />
-        <Setter Property="Width" Value="225" />
-        <Setter Property="Height" Value="{StaticResource GarnishRowHeight}" />
-        <Setter Property="Foreground" Value="White" />
-        <Setter Property="HorizontalAlignment" Value="Left" />
-        <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="TextAlignment" Value="Left" />
-        <Setter Property="FontFamily" Value="Microsoft Yi Baiti" />
-        <Setter Property="TextWrapping" Value="WrapWholeWords" />
+        <Setter Property="Transitions">
+            <Setter.Value>
+                <TransitionCollection>
+                    <ContentThemeTransition />
+                </TransitionCollection>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="GarnishButtonStyle" TargetType="Button">
@@ -132,5 +127,12 @@
         <Setter Property="Width" Value="175" />
         <Setter Property="Height" Value="{StaticResource GarnishRowHeight}" />
         <Setter Property="Margin" Value="0,0,0,20" />
+        <Setter Property="Transitions">
+            <Setter.Value>
+                <TransitionCollection>
+                    <EntranceThemeTransition />
+                </TransitionCollection>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
